WIP Bootstrap Components

--- a/plossPortfolioProject.html
+++ b/plossPortfolioProject.html
@@ -1,12 +1,191 @@
-<!DOCTYPE html>
+<!DOCTYPE html />
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bianca Ploss Portfolio</title>
+
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Special+Elite&display=swap" />
+
+    
 </head>
 <body>
     
+    <header>
+        <div class="container-fluid d-none d-md-block">
+            <div class="row justify-content-center">
+                <img src="/img/mush1.png" alt="Mushroom Illustration" class="img-fluid" width="20%" />
+                <img src="/img/mush1.png" alt="Mushroom Illustration" class="img-fluid" width="20%" />
+                <img src="/img/mush1.png" alt="Mushroom Illustration" class="img-fluid" width="20%" />
+                <img src="/img/mush1.png" alt="Mushroom Illustration" class="img-fluid" width="20%" />
+            </div>
+        </div>
+    </header>
+
+    <div class="container-fluid">
+        <div class="row header-ribbon">
+            <div class="col col-md text-center">
+                <hr />
+                <h1 style="font-size:8vw;" class="text-nowrap">Bianca Ploss</h1>
+            </div>
+            <div class="col col-md text-nowrap text-center">
+                <h2 style="font-size:3vw;" class="mb-4">I'm a software developer in development out of Cleveland, Ohio.</h2>
+                <hr />
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col align-self-center order-2 order-lg-first col-12 col-lg-4" id="LHPapers">
+            <div class="card mx-3">
+                <div class="card-body">
+                    <h3>What I've Done</h3>
+                    <p>Eventually projects and a short description will go here. Is this my espresso machine? Wh-what is-h-how did you get my espresso machine? Jaguar shark! So tell me - does it really exist? Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. Hey, take a look at the earthlings. Goodbye!</p>
+                    <div class="row">
+                        <div class="col-12 mt-3">
+                            <h4 class="text-start">
+                                QA Developer
+                                <small class="text-muted text-nowrap">Vendera Mobile</small>
+                            </h4>
+                            <p class="text-start">Since February 2023</p>
+                            <ul>
+                                <li>Develop code for software testing</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 mt-3">
+                            <h4 class="text-start">
+                                Chapter Director
+                                <small class="text-muted text-nowrap">Women Who Code</small>
+                            </h4>
+                            <p>Since March 2023</p>
+                            <ul>
+                                <li>Leading events for the Cleveland Chapter</li>
+                                <li>Provides community outreach</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 mt-3">
+                            <h4 class="text-start">
+                                Junior Internship
+                                <small class="text-muted text-nowrap">Appservations</small>
+                            </h4>
+                            <p>2022</p>
+                            <ul>
+                                <li>Debugged timer software</li>
+                                <li>Worked with other developers off the main branch to add features</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col">
+                            <img src="/img/logo.png" alt="cert for something tbd" />
+                        </div>
+                        <div class="col">
+                            <img src="/img/logo.png" alt="cert for something tbd" />
+                        </div>
+                        <div class="col">
+                            <img src="/img/logo.png" alt="cert for something tbd" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col text-center order-last order-lg-2 col-12 col-lg-4" id="centerPaper">
+            <h3 class="mt-4 mb-5">Contact Me</h3>
+            <div class="col col-12 mb-5">
+                <img src="img/logo.png" alt="email"/>
+            </div>
+            <div class="col col-12 mb-5">
+                <img src="img/logo.png" alt="linkedIn" />
+            </div>
+            <div class="col col-12 mb-5">
+                <img src="img/logo.png" alt="github" />
+            </div>
+            <div class="col">
+                <form>
+                    <label for="name">Name: </label>
+                    <input type="text" name="name" id="name" placeholder="First and Last Name"/>
+                    </br>
+                    <label for="email">Email: </label>
+                    <input type="email" name="email" id="email" placeholder="Email"/>
+                    </br>
+                    <label for="message" class="align-self-top">Message: </label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message here"></textarea>
+                    <button class="btn btn-info color-white">Send</button>
+                </form>
+            </div>
+            <p>Some blurp here. They're using our own satellites against us. And the clock is ticking. Remind me to thank John for a lovely weekend. Remind me to thank John for a lovely weekend. Eventually, you do plan to have dinosaurs on your dinosaur tour, right? I gave it a cold? I gave it a virus. A computer virus.</p>
+            <div class="col">
+                <img src="img/mush1.png" height="200" alt="portrait of Bianca Ploss" />
+            </div>
+        </div>
+
+        <div class="col order-first order-lg-3 col-12 col-lg-4 my-5" id="RHPapers">
+            <div class="card mx-3">
+                <h3>What I Can Do</h3>
+                <h4 class="align-self-center">Technologies and Skillsets</h4>
+                <div class="row text-center">
+                    <div class="col">
+                        <img src="img/logo.png" alt="HTML 5 Icon" />
+                        <h5>HTML 5</h5>
+                    </div>
+                    <div class="col">
+                        <img src="img/logo.png" alt="CSS 3 Icon" />
+                        <h5>CSS 3</h5>
+                    </div>
+                    <div class="col">
+                        <img src="img/logo.png" alt="Responsive Websites Icon" />
+                        <h5>Responsive Websites</h5>
+                    </div>
+                </div>
+                <div class="row text-center">
+                    <div class="col">
+                        <img src="img/logo.png" alt="C Sharp Icon" />
+                        <h5>C#</h5>
+                    </div>
+                    <div class="col">
+                        <img src="img/logo.png" alt="Selenium Icon" />
+                        <h5>Selenium</h5>
+                    </div>
+                    <div class="col">
+                        <img src="img/logo.png" alt="Adobe Suite Icon" />
+                        <h5>Adobe Suite</h5>
+                    </div>
+                </div>
+            </div>
+            <!--Going to need to add space here-->
+            <div class="card mt-5 mx-3">
+                <h3 class="mt-3">What's Next</h3>
+                <ul>
+                    <li>Completing Nucamp Courses</li>
+                    <li>Project XYZ</li>
+                    <li><a href="https://www.womenwhocode.com/cleveland/events" target="_blank">Women Who Code Events</a></li>
+                    <li>Link to a blog style page here...</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col text-center">
+            <img src="img/typewriter.png" alt="typewriter" height="700" />
+        </div>
+    </div>
+
+
+    <footer>
+        Website made by Bianca Ploss 2023
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
