--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bianca Ploss Portfolio</title>
 
+        <!-- build:css css/main.css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- endbuild -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Special+Elite&display=swap" />
 
     
@@ -123,13 +126,13 @@
             </div>
             <p>Some blurp here. They're using our own satellites against us. And the clock is ticking. Remind me to thank John for a lovely weekend. Remind me to thank John for a lovely weekend. Eventually, you do plan to have dinosaurs on your dinosaur tour, right? I gave it a cold? I gave it a virus. A computer virus.</p>
             <div class="col">
-                <img src="img/mush1.png" height="200" alt="portrait of Bianca Ploss" />
+                <img src="img/profile.jpg" height="200" class="mb-3 rounded profilePic" alt="portrait of Bianca Ploss" />
             </div>
         </div>
 
         <div class="col order-first order-lg-3 col-12 col-lg-4 my-5" id="RHPapers">
             <div class="card mx-3">
-                <h3>What I Can Do</h3>
+                <h3 class="mt-3">What I Can Do</h3>
                 <h4 class="align-self-center">Technologies and Skillsets</h4>
                 <div class="row text-center">
                     <div class="col">
@@ -174,9 +177,9 @@
     </div>
 
 
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col text-center">
-            <img src="img/typewriter.png" alt="typewriter" height="700" />
+            <img src="img/typewriter.png" alt="typewriter" class="img-fluid" width="65%" />
         </div>
     </div>
 
